# databricks-sql

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yaml
databricks_sql/: client.py  main.py
tests/: test_default.py
tests/commands/: test_execute_file_fetch_all.sql  test_execute_file_fetch_many.sql  test_execute_file_fetch_many_with_parameter.sql  test_execute_file_fetch_one.sql
